added geolocation object

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <script defer src="script.js"></script>
-    <title>mapty // Map your workouts</title>
+    <title>Map my fitness</title>
   </head>
   <body>
     <div class="sidebar">
@@ -111,10 +111,9 @@
         <a
           class="twitter-link"
           target="_blank"
-          href="https://twitter.com/jonasschmedtman"
-          >Jonas Schmedtmann</a
-        >. Use for learning or your portfolio. Don't use to teach. Don't claim
-        as your own.
+          href="https://instantfamilytrust.com"
+          >Gabriel Guevara</a
+        >Sponsered by Instanfamilytrust.com
       </p>
     </div>
 
